--- a/src/Minesweeper/UI/ApplicationView.form
+++ b/src/Minesweeper/UI/ApplicationView.form
@@ -3,6 +3,7 @@
 <Form version="1.9" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
+    <Property name="title" type="java.lang.String" value="Minesweeper Application"/>
     <Property name="bounds" type="java.awt.Rectangle" editor="org.netbeans.beaninfo.editors.RectangleEditor">
       <Rectangle value="[0, 23, 900, 820]"/>
     </Property>
@@ -301,7 +302,7 @@
                       <StringArray count="3">
                         <StringItem index="0" value="Regular"/>
                         <StringItem index="1" value="Hexagonal"/>
-                        <StringItem index="2" value="Colouring Problem"/>
+                        <StringItem index="2" value="Coloring Problem"/>
                       </StringArray>
                     </Property>
                     <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
